# web-monitoring-processing

./: .dockerignore  .doctr-files  .editorconfig  .env.example  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.ia-archiver  Dockerfile.ia-etl  Dockerfile.ia-healthcheck  README.md  cdx_api.html  circle.yml  cronjob.yaml  data_sources.html  db_api.html  dev-requirements.txt  environment.yml  genindex.html  ia-archiver-cronjob.yaml  index.html  installation.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  search.html  searchindex.js  setup.py  wayback.html
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: add-to-project.yml
_modules/: index.html
_modules/web_monitoring/: db.html  internetarchive.html
_sources/: db_api.rst.txt
_static/: documentation_options.js
_static/css/: custom.css
docs/: rtd-requirements.txt
docs/source/: conf.py  data_sources.rst  index.rst  installation.rst  wayback.rst
docs/source/_static/css/: custom.css
get_article_text/: readme.md
machine_learning/: create_dataset.py  data_downloader.py  dataset_creator.py  sample_model.py  utils.py
page_freezer_python_module/: PageFreezer.ipynb  README.md  example.json
scripts/: annotations_import  annotations_import.py  dataset-creator  ia_healthcheck  warc_import  wm  wm-data-downloader  wm-diffing-server
web_monitoring/: __init__.py  annotations_import.py  cli.py  content_type.py  db.py  differs.py  diffing_server.py  fetch.py  filtering.py  html_diff_render.py  internetarchive.py  links_diff.py  logging.py  media.py  utils.py
web_monitoring/cli/: annotations_import.py  cli.py  ia_healthcheck.py  warc_import.py
web_monitoring/diff/: content_type.py  deprecation.py  diff_errors.py  differs.py  html_diff_render.py  links_diff.py
web_monitoring/diff_server/: server.py
web_monitoring/tests/: support.py  test_cli.py  test_content_type.py  test_db.py  test_differs.py  test_diffing_server_exc_handling.py  test_html_diff.py  test_html_diff_validity.py  test_ia.py  test_links_diff.py  test_media.py  test_utils.py
web_monitoring/tests/cassettes/: test_get_change  test_get_db_uuid_by_versionista_id
web_monitoring/tests/cassettes/cli/: test_complete_import_ia_db_urls  test_format_memento  test_format_memento_handles_redirects  test_format_memento_pdf  test_html_title_parsing  test_import_skips_bad_mementos  test_validate_db_credentials
web_monitoring/tests/cassettes/db/: test_get_annotations  test_get_changes  test_get_page  test_get_pages  test_get_pages_can_filter_maintainers  test_get_pages_can_filter_tags  test_get_pages_can_filter_url  test_get_pages_includes_relations  test_get_user_session  test_get_version_by_versionista_id  test_get_versions  test_get_versions_for_page  test_get_versions_includes_changes  test_list_page_versions  test_monitor_import_statuses_returns_errors  test_validate_credentials  test_validate_credentials_should_raise
(+31 files in other folders)
